--- a/StringCaseToggle/index.html
+++ b/StringCaseToggle/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container" style="display: grid; align-items: center; justify-content: center;">
-        <label for="input">Enter String : <input type="text" id="input" ></label>
+        <label for="input">Enter String : <input type="text" id="input" value="the quick brown fox jumps over a lazy dog"></label>
         <br><br>
         <label for="uc"><input type="radio" name="Case" id="uc" value="1" onclick="uCase()">Upper Case</label>
         <label for="lc"><input type="radio" name="Case" id="lc" value="2" onclick="lCase()">Lower Case</label>
